# car_accident_ai

./: .gitignore  README.md  main.py  pyproject.toml
.claude/: settings.local.json
docs/: system_overview.md
legacy/: analyze.py  video.py
src/: accident_detail_analyzer.py  accident_detector.py  config.py  models.py  token_logger.py  video_loader.py  video_preprocessor.py  video_validator.py
src/analysis/: __init__.py  base_analyzer.py  content_builder.py  detail_analyzer.py  detector.py  response_parser.py
src/prompts/: detail_analyzer.prompt  detector.prompt
src/utils/: __init__.py  logger.py  token_counter.py
src/video/: __init__.py  loader.py  preprocessor.py  validator.py
